Feat: Update to Fabric 1.20.1